cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
project(leetcode)
set(CMAKE_CXX_STANDARD 11)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

add_executable(1-Two-Sum leetcode/1-Two-Sum.cpp)
add_executable(2-Add-Two-Numbers leetcode/2-Add-Two-Numbers.cpp)
add_executable(3-Longest-Substring-Without-Repeating-Characters leetcode/3-Longest-Substring-Without-Repeating-Characters.cpp)
add_executable(4-Median-of-Two-Sorted-Arrays leetcode/4-Median-of-Two-Sorted-Arrays.cpp)
add_executable(5-Longest-Palindromic-Substring leetcode/5-Longest-Palindromic-Substring.cpp)
add_executable(6-ZigZag-Conversion leetcode/6-ZigZag-Conversion.cpp)
add_executable(7-Reverse-Integer leetcode/7-Reverse-Integer.cpp)